[gd_scene load_steps=4 format=3 uid="uid://bx2b4oh6or1r1"]

[ext_resource type="Theme" uid="uid://4vnnn3rdujyi" path="res://Asset/h_box_clipboard_edit.tres" id="1_b8t6t"]
[ext_resource type="Script" path="res://Scene/clipboard_spin_box.gd" id="2_iequb"]
[ext_resource type="Texture2D" uid="uid://d3s0rtbtly582" path="res://Asset/clipboard_icon.svg" id="3_vuak3"]

[node name="ClipboardSpinBox" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("1_b8t6t")
script = ExtResource("2_iequb")

[node name="ClipboardButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
icon = ExtResource("3_vuak3")

[node name="SpinBox" type="SpinBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
allow_greater = true
allow_lesser = true

[connection signal="pressed" from="ClipboardButton" to="." method="on_pressed"]
[connection signal="value_changed" from="SpinBox" to="." method="_on_spin_box_value_changed"]
